src/catalogue/styles/Details.css
.details {
    line-height: 1.5rem;
    width: 30%;
    padding: 0 1.5rem;
    margin: 1rem 0;
    height: 100%;    
    display: flex;
    flex-direction: column;
}

.details-loading {
    font-size: 1.3rem;
    align-items: center;
    justify-content: center;
    color: #A9A9A9;
}

.details-name {
    margin-bottom: 0.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.details-name h3 {
    font-size: 2.4rem;
    font-weight: 500;
    line-height: 3.5rem;
    margin: 0;
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.details-manage-icon {
    position: relative;
    top: 7px;
    padding-left: 5px;
}

.details-uuid {
    font-size: 1.6rem;
    margin-bottom: 1.5rem;
}
.details-uuid i {
    margin-left: 1rem;
    cursor: pointer;
    color: grey;
    font-size: 1.6rem;
}
.details-uuid i:active {
    transform: translateY(1px);
}

.details-map {
    position: relative;
    height: 20rem;
    width: 100%;
    margin-bottom: 1.5rem;
    display: flex;
}
.details-map-loading {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 1000;
    display: flex;
    justify-content: center;
    align-items: center;
}
.leaflet-container {
    width: 100%;
}

.details-info {
    max-height: 15%;
    margin-bottom: 1.5rem;
    display: flex;
    flex-direction: column;
}
.description {
    overflow-y: auto;
}
.details-title {
    font-weight: 500;
    font-size: 1.8rem;
    margin: .5rem 0;
}

/* Table */
.details-table {
    width: 100%;
    table-layout: fixed;
}
.details-table th {
    height: 3.8rem;
    font-size: 2rem;
    font-weight: 500;
    text-transform: uppercase;
    margin-bottom: 2rem;
    color: var(--border-color-soft);
    border-bottom: 6px solid var(--main-color-scheme);
    background-color: var(--main-color-scheme);
    cursor: pointer;
}
.details-table .details-table-selected {
    color: #FFFFFF;
    border-bottom: 6px solid var(--button-color-scheme);
}
.details-table-empty-row {
    height: 2rem;
}
.details-table td {
    padding: 0 1rem;
    padding-bottom: 1rem;
}
.details-table tr > td:nth-child(2) {
    font-weight: 500;
}

/* Get capabilities */
.details-capabilities {
    margin-bottom: 1rem;
    display: flex;
    flex-direction: column;
}
.details-capabilities .details-title {
    margin-bottom: 1rem;
}
.details__url-field {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.details__get-capabilities-url {
    width: 84%;
    height: 2.5rem;
    padding: .4rem;
    margin: .4rem 0;
    border-radius: .2rem;
    border: 1px solid lightgrey;
    color: grey;
    background: #FFFFFF 0% 0% no-repeat padding-box;
}
.details__get-capabilities-url:focus {
    outline: none;
}

/* Buttons */
.details__button-copy {
    cursor: pointer;
    width: 15%;
    margin: 0;
    padding: 0.5rem;
    color: #fff;
    background-color: var(--main-color-scheme);
    border: none;
    border-radius: .2rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    box-shadow: .1rem .1rem .3rem rgba(12, 12, 12, 0.5);
}
.details__button-copy:focus {
    outline: none;
}
.details__button-copy:active {
    transform: translateY(2px);
}

.details__button-container {
    max-height: 10%;
    margin-bottom: 1rem;
}

.details__button {
    font-size: 1.4rem;
    line-height: 1.6rem;
    background-color: var(--main-color-scheme);
    color: #fff;
    border: none;
    border-radius: .2rem;
    border-bottom: 1px solid grey;
    padding: .6rem .8rem;
    margin-right: .2rem;
    cursor: pointer;
    box-shadow: .1rem .2rem .4rem rgba(12, 12, 12, 0.5);
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    text-transform: uppercase;
}

.details__button-danger {
    background-color: #ff7070;
}

.details__button:last-child {
    margin-right: 0;
}

.details__button:focus {
    outline: none;
}

.details__button:active {
    transform: translateY(1px)
}

.details__buttons {
    display: flex;
    justify-content: space-between;
}

